--- a/src/main/resources/static/webApp/subsidyApplySubmit.html
+++ b/src/main/resources/static/webApp/subsidyApplySubmit.html
@@ -134,12 +134,14 @@
 			<div class="layui-input-inline">
 				<input type="text" name="subsidyFundForBoardingNursery" placeholder="￥" required  lay-verify="required\number" autocomplete="off" class="layui-input">
 			</div>
+			<div class="layui-form-mid layui-word-aux">万元</div>
 		</div>
 		<div class="layui-inline">
 			<label class="layui-form-label">申请机构日托运营补贴资金总额</label>
 			<div class="layui-input-inline">
 				<input type="text" name="subsidyFundForDayNursery" placeholder="￥" required  lay-verify="required\number" autocomplete="off" class="layui-input">
 			</div>
+			<div class="layui-form-mid layui-word-aux">万元</div>
 		</div>
 	</div>
 
@@ -147,14 +149,16 @@
 		<div class="layui-inline">
 			<label class="layui-form-label">上年当地资金投入情况</label>
 			<div class="layui-input-inline">
-				<input type="text" name="localInvestmentOfLastYear" required  lay-verify="required\number" autocomplete="off" class="layui-input">
+				<input type="text" placeholder="￥" name="localInvestmentOfLastYear" required  lay-verify="required\number" autocomplete="off" class="layui-input">
 			</div>
+			<div class="layui-form-mid layui-word-aux">万元</div>
 		</div>
 		<div class="layui-inline">
 			<label class="layui-form-label">申请托养机构运营补贴资金总额合计</label>
 			<div class="layui-input-inline">
 				<input type="text" name="totalSubsidyFunds"  placeholder="￥" required  lay-verify="required\number" autocomplete="off" class="layui-input">
 			</div>
+			<div class="layui-form-mid layui-word-aux">万元</div>
 		</div>
 	</div>
 
