--- a/src/main/resources/static/webApp/subsidyApplySubmit.html
+++ b/src/main/resources/static/webApp/subsidyApplySubmit.html
@@ -89,6 +89,7 @@
 			<div class="layui-input-inline">
 				<input type="text" name="area" autocomplete="off" class="layui-input">
 			</div>
+			<div class="layui-form-mid layui-word-aux">m²</div>
 		</div>
 		<div class="layui-inline">
 			<label class="layui-form-label">床位数</label>
