--- a/src/main/resources/static/webApp/disabledFundInfo.html
+++ b/src/main/resources/static/webApp/disabledFundInfo.html
@@ -325,12 +325,12 @@
                 ,{field: 'subsidyFundForBoardingNursery', title: '申请机构全托运营补贴资金总额', width: 235, sort: true}
                 ,{field: 'localInvestmentOfLastYear', title: '上年当地资金投入情况', width: 235, sort: true}
                 ,{field: 'totalSubsidyFunds', title: '申请托养机构运营补贴资金总额合计', width: 235, sort: true}
-                ,{field: 'nursingList', title: '托养残疾人名单', width: 135, sort: true ,templet: function(d){
-                        return smail(d.nursingList);
-                    }}
-                ,{field: 'lowIncomeCertificate', title: '低保或其他低收入证明', width: 135, sort: true ,templet: function(d){
-                        return smail(d.lowIncomeCertificate);
-                    }}
+                // ,{field: 'nursingList', title: '托养残疾人名单', width: 135, sort: true ,templet: function(d){
+                //         return smail(d.nursingList);
+                //     }}
+                // ,{field: 'lowIncomeCertificate', title: '低保或其他低收入证明', width: 135, sort: true ,templet: function(d){
+                //         return smail(d.lowIncomeCertificate);
+                //     }}
                 ,{field: 'adminName', title: '提交人', width: 135, sort: true}
                 ,{field: 'createTime', title: '提交时间', width: 135, sort: true}
                 ,{field: 'lastModifyTime', title: '更新时间', width: 135, sort: true}
