--- a/src/main/resources/static/webApp/disabledInfo.html
+++ b/src/main/resources/static/webApp/disabledInfo.html
@@ -119,7 +119,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">身份证号</label>
 			<div class="layui-input-block" style="padding-right:15px;">
-				<input type="number" name="idNumber" lay-verify="required" placeholder="" autocomplete="off"
+				<input type="text" name="idNumber" lay-verify="required" placeholder="" autocomplete="off"
 					   class="layui-input">
 			</div>
 		</div>
@@ -232,7 +232,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">身份证号</label>
 			<div class="layui-input-block" style="padding-right:15px;">
-				<input type="number" name="card" lay-verify="required" placeholder="请输入身份证号" autocomplete="off"
+				<input type="text" name="card" lay-verify="required" placeholder="请输入身份证号" autocomplete="off"
 					   class="layui-input">
 			</div>
 		</div>
