--- a/src/main/resources/static/webApp/manager/disabledHomeInfo.html
+++ b/src/main/resources/static/webApp/manager/disabledHomeInfo.html
@@ -81,6 +81,7 @@
 				{field:'area', width:80, title: '机构面积', sort: true},
 				{field:'bedNum', width:80, title: '床位数', sort: true},
 				{field: 'asylumLaborProjects', width:135, title: '庇护性劳动项目', sort: true},
+				{field: 'operationalNatureId', width:135, title: '机构运营性质', sort: true},
 				{field:'detailedAddress', width:135, title: '地址'},
 				{field:'personInCharge', width:135, title: '负责人', sort: true},
 				{field:'gender', width:135, title: '性别', sort: true},
