--- a/src/main/resources/static/webApp/manager/orgInfoSubmit.html
+++ b/src/main/resources/static/webApp/manager/orgInfoSubmit.html
@@ -96,6 +96,13 @@
 				<input type="text" name="asylumLaborProjects" required  lay-verify="required" autocomplete="off" class="layui-input">
 			</div>
 		</div>
+		<div class="layui-inline">
+			<label class="layui-form-label">机构运营性质</label>
+			<div class="layui-input-inline">
+				<select id="jgyyxz" name="operationalNatureId" lay-verify="required">
+				</select>
+			</div>
+		</div>
 	</div>
 
 	<div class="layui-form-item">
@@ -279,6 +286,16 @@
             }
         })
 
+        $.ajax({
+            type: "GET",
+            url: "/api/typeList",
+            data:{name:"nature"},
+            success: function (data) {
+                setYYXZ(data);
+                form.render('select'); //刷新select选择框渲染
+            }
+        })
+
 		//执行实例
 		var uploadInst = upload.render({
 			elem: '#test1' //绑定元素
@@ -408,6 +425,15 @@
             html.push('<option value="'+array[i].id+'">'+array[i].name+'</option>');
         }
         $("#fwcqxz").html(html.join(""));
+    }
+
+    function setYYXZ(data) {
+        var array = data.data;
+        var html = [];
+        for (var i = 0; i < array.length; i++) {
+            html.push('<option value="'+array[i].id+'">'+array[i].nature+'</option>');
+        }
+        $("#jgyyxz").html(html.join(""));
     }
 
 	function getAddress(type,value,_form) {
