--- a/src/main/resources/static/webApp/disabledInfo.html
+++ b/src/main/resources/static/webApp/disabledInfo.html
@@ -126,7 +126,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">残疾证号</label>
 			<div class="layui-input-block" style="padding-right:15px;">
-				<input type="number" name="disabilityCertificateNumber" lay-verify="required" placeholder="请输入残疾证号" autocomplete="off"
+				<input type="text" name="disabilityCertificateNumber" lay-verify="required" placeholder="请输入残疾证号" autocomplete="off"
 					   class="layui-input">
 			</div>
 		</div>
@@ -559,7 +559,7 @@
                 {field: 'address', title: '家庭住址', align: 'center', unresize: true},
 				{field: 'contactNumber', title: '联系电话', align: 'center', unresize: true},
                 {field: 'nursingModeId', title: '托养方式', align: 'center', unresize: true,templet: function(d){
-                        return ["其他","日托","全托"][d.nursingModeId]
+                        return ["其他","全托","日托"][d.nursingModeId]
                     }},
 //                {field: 'nursingMonth', title: '托养月数', align: 'center', unresize: true},
 //                {field: 'subsidies', title: '补贴金额', align: 'center', unresize: true},
