--- a/src/main/resources/static/webApp/disabledHomeStatiscs.html
+++ b/src/main/resources/static/webApp/disabledHomeStatiscs.html
@@ -82,7 +82,7 @@
             html.push('<button onclick="gotoDetail('+array[i].id+')" style="float: right;" type="button" class="layui-btn layui-btn-primary layui-btn-xs">详情</button>');
             html.push('<h2>'+array[i].name+'</h2>');
             html.push('<div class="numbers">');
-            html.push('<p>残疾人托养服务补贴资金申请记录: <span class="bold-text">'+array[i].applySum+'</span> 条</p>');
+            html.push('<p>残疾人托养服务补贴资金申请记录: <span class="bold-text">'+(array[i].applySum||0)+'</span> 条</p>');
             html.push('</div> </div> </div> </div> </div>');
         }
 
