--- a/src/main/resources/static/webApp/manager/serviceInfo.html
+++ b/src/main/resources/static/webApp/manager/serviceInfo.html
@@ -222,7 +222,7 @@
                 return {
                     "code": 200, //解析接口状态
 //                    "msg": res.message, //解析提示文本
-                    "count": res.pageSize, //解析数据长度
+                    "count": res.realSize, //解析数据长度
                     "data": res.data //解析数据列表
                 };
             },
