--- a/src/main/resources/static/webApp/subsidyApplyOrg.html
+++ b/src/main/resources/static/webApp/subsidyApplyOrg.html
@@ -86,8 +86,8 @@
     		, parseData: function (res) { //将原始数据解析成 table 组件所规定的数据
 				return {
 					"code": 200, //解析接口状态
-	//                    "msg": res.message, //解析提示文本
-	//                     "count": res.total, //解析数据长度
+	//                    "msg": res.message, //解析提示文
+					"count": res.realSize, //解析数据长度
 					"data": res.data //解析数据列表
 				};
 			}
