--- a/src/main/resources/static/webApp/manager/disabledHomeInfo.html
+++ b/src/main/resources/static/webApp/manager/disabledHomeInfo.html
@@ -115,14 +115,19 @@
 
         function smail(str){
             if(str){
+                var _html = "";
+                var _array = str.split(",");
+                for (var i = 0; i < _array.length; i++) {
+                    _html += '<a title="点击查看原图" target="_blank" href="'+_array[i]+'"><img src="'+_array[i]+'" style="width: 30px;"></a>'
+                }
                 if(str.indexOf(".jpg") != -1 || str.indexOf(".png") != -1){
-                    return '<a title="点击查看原图" target="_blank" href="'+str+'"><img src="'+str+'" style="width: 30px;"></a>'
+                    return _html;
                 }else if(str.indexOf(".doc") != -1 || str.indexOf(".docx") != -1){
                     return '<img src="../images/word.png" style="width: 30px;">'
                 }else if(str.indexOf(".xls") != -1 || str.indexOf(".xlsx") != -1){
                     return '<img src="../images/xls.png" style="width: 30px;">'
                 }else {
-                    return '<a title="点击查看原图" target="_blank" href="'+str+'"><img src="'+str+'" style="width: 30px;"></a>'
+                    return _html;
 				}
 			}else {
                 return "";
