--- a/src/main/resources/static/webApp/manager/orgInfoSubmit.html
+++ b/src/main/resources/static/webApp/manager/orgInfoSubmit.html
@@ -392,7 +392,7 @@
 			var _data = data.field;
             delete _data['file'];
 			_data.adminId = localStorage.getItem("userId");
-			_data.id = localStorage["jgid"];
+			_data.id = localStorage.jgid;
 
             _data.addressId = "雨花台区";
             if(!_data.city){
