--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -117,6 +117,12 @@
 						<dd><a href="webApp/subsidyApplyOrg.html">残疾人托养服务补贴资金申请汇总</a></dd>
 					</dl>
 				</li>
+				<li class="layui-nav-item">
+					<a href="javascript:;">打卡记录</a>
+					<dl class="layui-nav-child">
+						<dd><a href="webApp/userClock.html">历史打卡记录</a></dd>
+					</dl>
+				</li>
 			</ul>
 		</div>
 	</div>
