--- a/src/main/resources/static/webApp/manager/serviceInfo.html
+++ b/src/main/resources/static/webApp/manager/serviceInfo.html
@@ -232,8 +232,8 @@
 				{field:'organizationName', minWidth:200, title: '所属机构名称', sort: true},
 				{field:'leader', width:160, title: '项目负责人', sort: true},
 				{field:'description', minWidth:200, title: '项目简介', unresize: true, sort: true},
-				{field:'personTimeSum', width:200, title: '总服务人数', sort: true},
-				{field:'personCountSum', width:200, title: '总服务人次', sort: true},
+				{field:'personCountSum', width:200, title: '总服务人数', sort: true},
+				{field:'personTimeSum', width:200, title: '总服务人次', sort: true},
 				{field:'totalTimeSum', width:200, title: '总服务时长', sort: true},
 				{field:'averageTime', width:200, title: '平均服务时长', sort: true},
 				{field:'adminName', width:100, title: '提交人', sort: true},
