--- a/src/main/resources/static/webApp/projectAnalysis.html
+++ b/src/main/resources/static/webApp/projectAnalysis.html
@@ -161,7 +161,9 @@
                 ,{field: 'projectType', title: '残疾人服务内容大类', width:280, sort: true}
                 ,{field: 'leader', title: '项目负责人', width:180, sort: true}
                 ,{field: 'description', title: '项目简介', unresize: true, sort: true}
-                ,{field: 'image', title: '项目图片', unresize: true, sort: true}
+                ,{field: 'image', title: '项目图片', unresize: true, sort: true,templet: function(d){
+                        return smail(d.image);
+                    }}
                 ,{field: 'startTime', title: '提交时间', width: 135, sort: true}
                 ,{field: 'endTime', title: '更新时间', width: 135, sort: true}
 
@@ -169,6 +171,27 @@
         });
 
     });
+
+    function smail(str){
+        if(str){
+            var _html = "";
+            var _array = str.split(",");
+            for (var i = 0; i < _array.length; i++) {
+                _html += '<a title="点击查看原图" target="_blank" href="'+_array[i]+'"><img src="'+_array[i]+'" style="width: 30px;"></a>'
+            }
+            if(str.indexOf(".jpg") != -1 || str.indexOf(".png") != -1){
+                return _html;
+            }else if(str.indexOf(".doc") != -1 || str.indexOf(".docx") != -1){
+                return '<img src="../images/word.png" style="width: 30px;">'
+            }else if(str.indexOf(".xls") != -1 || str.indexOf(".xlsx") != -1){
+                return '<img src="../images/xls.png" style="width: 30px;">'
+            }else {
+                return _html;
+            }
+        }else {
+            return "";
+        }
+    }
 </script>
 
 </body>
