添加用户管理

--- a/src/main/resources/static/managerIndex.html
+++ b/src/main/resources/static/managerIndex.html
@@ -86,6 +86,13 @@
 						<!--<dd><a href="webApp/manager/subsidyApplication.html" title="残疾人托养服务补贴资金申请明细">残疾人托养服务补贴资金申请明细</a></dd>-->
 					</dl>
 				</li>
+				<li class="layui-nav-item">
+					<a href="javascript:;" title="系统管理">系统管理</a>
+					<dl class="layui-nav-child">
+						<dd><a href="webApp/usermanage.html" title="用户管理">用户管理</a></dd>
+						<!--<dd><a href="webApp/manager/subsidyApplication.html" title="残疾人托养服务补贴资金申请明细">残疾人托养服务补贴资金申请明细</a></dd>-->
+					</dl>
+				</li>
 
 				<!--<li class="layui-nav-item">-->
 					<!--<a href="webApp/manager/disabledClassifySubmit.html">残疾人分类</a>-->
